Thêm chức năng chỉnh sửa account

--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
@@ -132,13 +132,13 @@
             <td>{{ item.Lop }}</td>
             <td>
               <a
-                matTooltip="Xem chi tiết"
+                matTooltip="Tạo bài kiểm tra trực tuyến"
                 matTooltipPosition="after"
                 class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
               >
                 <!-- (click)="detail(item.IdQuestion)" -->
                 <span
-                  [inlineSVG]="'./assets/media/svg/icons/General/Visible.svg'"
+                  [inlineSVG]="'./assets/media/svg/icons/General/Update.svg'"
                   cacheSVG="true"
                   class="svg-icon svg-icon-md svg-icon-primary"
                 >
