--- a/Angular_Client/src/app/pages/_layout/components/topbar/topbar.component.html
+++ b/Angular_Client/src/app/pages/_layout/components/topbar/topbar.component.html
@@ -91,7 +91,7 @@
         >
           <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Chào,</span>
           <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{
-            _user.fullname
+            _user.lastname
           }}</span>
           <span class="symbol symbol-lg-35 symbol-25 symbol-light-success">
             <span class="symbol-label font-size-h5 font-weight-bold">{{ _user.fullname[0] }}</span>
@@ -110,7 +110,7 @@
           <div class="btn btn-icon w-auto btn-clean d-flex align-items-center btn-lg px-2">
             <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Chào,</span>
             <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{
-              _user.fullname
+              _user.lastname
             }}</span>
             <span class="symbol symbol-35 symbol-light-success">
               <span class="symbol-label font-size-h5 font-weight-bold">{{ _user.fullname | firstLetter }}</span>
