Update feature và fix bug

--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-mon-hoc/quan-li-mon-hoc.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-mon-hoc/quan-li-mon-hoc.component.html
@@ -20,7 +20,7 @@
             <li class="list-group-item">{{item.DanhSachGiaoVien.length}} giáo viên</li>
           </ul>
           <div class="card-body">
-            <a href="#" class="card-link">Bổ sung/chỉnh sửa thông tin</a>
+            <a href="#" class="card-link" [routerLink]="'./chinh-sua/'+item.Id">Bổ sung/chỉnh sửa thông tin</a>
           </div>
         </div>
     </ng-container>
