--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-mon-hoc/quan-li-mon-hoc-edit/components/danh-sach-bai-hoc-modify/danh-sach-bai-hoc-modify.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-mon-hoc/quan-li-mon-hoc-edit/components/danh-sach-bai-hoc-modify/danh-sach-bai-hoc-modify.component.html
@@ -32,7 +32,21 @@
                                 </mat-option>
                             </mat-select>
                         </td>
-                        <td></td>
+                        <td>
+                            <a
+                                matTooltip="Xóa"
+                                matTooltipPosition="after"
+                                class="btn btn-icon btn-light btn-hover-danger btn-sm"
+                                (click)="deleteBaiHoc(i)"
+                            >
+                                <span
+                                [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'"
+                                cacheSVG="true"
+                                class="svg-icon svg-icon-md svg-icon-danger"
+                                >
+                                </span>
+                            </a>
+                        </td>
                     </ng-container>
                 </tr>
                 <tr>
