--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
@@ -135,8 +135,8 @@
                 matTooltip="Tạo bài kiểm tra trực tuyến"
                 matTooltipPosition="after"
                 class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
+                (click) = "createOnlineExam(item)"
               >
-                <!-- (click)="detail(item.IdQuestion)" -->
                 <span
                   [inlineSVG]="'./assets/media/svg/icons/General/Update.svg'"
                   cacheSVG="true"
