--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-mon-hoc/quan-li-mon-hoc-edit/quan-li-mon-hoc-edit.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-mon-hoc/quan-li-mon-hoc-edit/quan-li-mon-hoc-edit.component.html
@@ -4,6 +4,9 @@
     <div class="card-title">
       <h3 class="card-label">CHI TIẾT MÔN HỌC</h3>
     </div>
+    <div class="card-toolbar">
+      <button type="button" class="btn btn-primary" (click)="create()">Thêm mới</button>
+    </div>
   </div>
   <!-- End Header -->
   <div class="card-body">
