--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan-hoc-sinh/quan-li-tai-khoan-hoc-sinh.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan-hoc-sinh/quan-li-tai-khoan-hoc-sinh.component.html
@@ -92,6 +92,7 @@
                         <td>{{ item.Holot }}</td>
                         <td>{{ item.Ten }}</td>
                         <td>{{ item.Username }}</td>
+                        <td>{{getBlock(item.Lop)}}</td>
                         <td>{{ item.Lop }}</td>
                         <td>
                             <a matTooltip="Chỉnh sửa" matTooltipPosition="after"
