--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-nien-khoa/quan-li-nien-khoa-add/quan-li-nien-khoa-add.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-nien-khoa/quan-li-nien-khoa-add/quan-li-nien-khoa-add.component.html
@@ -22,7 +22,7 @@
     <!-- End Header -->
   
     <!-- Body -->
-    <div class="overlay overlay-block cursor-default modal-body" style="min-height: 404px">
+    <div class="overlay overlay-block cursor-default modal-body">
       <ng-container *ngIf="isLoading$ | async">
         <div class="overlay-layer bg-transparent">
           <div class="spinner spinner-lg spinner-success"></div>
