--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan-hoc-sinh/quan-li-tai-khoan-hoc-sinh.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan-hoc-sinh/quan-li-tai-khoan-hoc-sinh.component.html
@@ -97,7 +97,7 @@
                         <td>
                             <a matTooltip="Chỉnh sửa" matTooltipPosition="after"
                                 class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
-                                [routerLink]="'./chinh-sua/'+item.Id">
+                                (click)="edit(item.Id)">
                                 <span [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'" cacheSVG="true"
                                     class="svg-icon svg-icon-md svg-icon-primary">
                                 </span>
