--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
@@ -21,7 +21,8 @@
           <small class="form-text text-muted"><b>Tìm kiếm</b> dữ liệu</small>
         </div>
         <div class="col-lg-4" [formGroup]="searchGroup">
-          <mat-select class="form-control" placeholder="Chọn khối" formControlName="searchLop" (selectionChange)="setValueLop($event)">
+          <mat-select class="form-control" placeholder="Chọn khối" formControlName="searchLop"
+            (selectionChange)="setValueLop($event)">
             <mat-option value=10>Khối 10</mat-option>
             <mat-option value=11>Khối 11</mat-option>
             <mat-option value=12>Khối 12</mat-option>
@@ -51,7 +52,8 @@
                 class="svg-icon svg-icon-md svg-icon-primary">
               </span>
             </a>
-            <a matTooltip="Xóa" matTooltipPosition="after" class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3" (click)="delete(item.Id)">
+            <a matTooltip="Xóa" matTooltipPosition="after" class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
+              (click)="delete(item.Id)">
               <span [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'" cacheSVG="true"
                 class="svg-icon svg-icon-md svg-icon-danger">
               </span>
@@ -59,6 +61,12 @@
             <a matTooltip="Active" matTooltipPosition="after"
               class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3" (click)="active(item.Id)">
               <span [inlineSVG]="'./assets/media/svg/icons/General/Update.svg'" cacheSVG="true"
+                class="svg-icon svg-icon-md svg-icon-primary">
+              </span>
+            </a>
+            <a matTooltip="In bài kiểm tra" matTooltipPosition="after"
+              class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3" (click)="export(item.Id)">
+              <span [inlineSVG]="'./assets/media/svg/icons/Devices/Printer.svg'" cacheSVG="true"
                 class="svg-icon svg-icon-md svg-icon-primary">
               </span>
             </a>
